初期化処理実装

--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
 <body>
   <div id="slider-body">
     <ul id="slider-wrap">
-        <li class="slider-item"><img src="img/sample1.png" alt="サンプル画像1" data-index="0"></li>
-        <li class="slider-item"><img src="img/sample2.png" alt="サンプル画像2" data-index="1"></li>
-        <li class="slider-item"><img src="img/sample3.png" alt="サンプル画像3" data-index="2"></li>
+
     </ul>
   </div>
-  <ul id="page-nation">
-    <li class="page-nation-item"></li>
-    <li class="page-nation-item"></li>
-    <li class="page-nation-item"></li>
+  <ul id="pagenation">
   </ul>
   <div class="btn-wrap">
     <button class="ctrl-btn" id="prev-btn">prev</button>
