一時停止機能追加

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   <ul id="pagenation">
   </ul>
   <div class="btn-wrap">
-    <button class="ctrl-btn" id="prev-btn">prev</button>
-    <button class="ctrl-btn" id="next-btn">next</button>
-    <button class="ctrl-btn" id="stop-btn">stop</button>
+    <button class="ctrl-btn" id="prev-btn">&lt;&nbsp;&nbsp;&nbsp;prev</button>
+    <button class="ctrl-btn" id="next-btn">next&nbsp;&nbsp;&nbsp;&gt;</button>
+    <button class="ctrl-btn" id="pause-btn">pause</button>
     <button class="ctrl-btn" id="restart-btn">restart</button>
+    <button class="ctrl-btn" id="stop-btn">stop</button>
   </div>
   <script src="js/slider.js"></script>
 </body>
