マウスオーバーサンプル追加

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slider Sample</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="slider_style.css">
 </head>
 <body>
   <div id="slider-body">
@@ -18,8 +18,11 @@
   <div class="btn-wrap">
     <button class="ctrl-btn" id="prev-btn">&lt;&nbsp;&nbsp;&nbsp;prev</button>
     <button class="ctrl-btn" id="next-btn">next&nbsp;&nbsp;&nbsp;&gt;</button>
-    <button class="ctrl-btn" id="pause-btn">pause</button>
-    <button class="ctrl-btn" id="restart-btn">restart</button>
+    <!-- <button class="ctrl-btn" id="pause-btn">pause</button>
+    <button class="ctrl-btn" id="restart-btn">restart</button> -->
+  </div>
+  <div class="btn-wrap">
+    <button class="ctrl-btn" id="start-btn">start</button>
     <button class="ctrl-btn" id="stop-btn">stop</button>
   </div>
   <script src="js/slider.js"></script>
