ファイル名変更、README修正

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <button class="ctrl-btn" id="start-btn">start</button>
     <button class="ctrl-btn" id="stop-btn">stop</button>
   </div>
-  <script src="js/slider.js"></script>
+  <script src="js/infiniteSlider.js"></script>
   <script>
     const imagesList = [
       { name: './img/sample1.png', alt: 'サンプル画像1'},
