スライド幅を設定に追加,README修正

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       sliderImages: imagesList,       // require
       pagenation: true, 　　　　　　　　 // optional
       swipe: true,      　　　　　　　　 // optional
+      // slideWidth: '100%',          // optional
       // sliderElemId: 'slider-wrap', // optional
       // swipeArea: 'slider-body' 　　 // optional
     }
